Products list - fix vertical spacing in Firefox

--- a/less/plugins/ecommerce/products-listing.less
+++ b/less/plugins/ecommerce/products-listing.less
@@ -362,9 +362,6 @@
 
 .product-item-article {
     position: relative;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
     width: 100%;
 }
 
@@ -393,9 +390,6 @@
         }
         .product-item-article {
             margin-bottom: 4%;
-            @-moz-document url-prefix() {
-                margin-bottom: 20px;
-            }
         }
     }
 }
@@ -462,7 +456,7 @@
             -webkit-flex: 0 0 auto;
             -ms-flex: 0 0 auto;
             flex: 0 0 auto;
-            object-fit: fill;
+            object-fit: contain;
         }
     }
 
